--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -4,8 +4,8 @@ name: my-ublue
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
-image-version: 40 # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/ublue-os/kinoite-nvidia
+image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -21,11 +21,18 @@ modules:
     install:
       # - micro
       # - starship
+      - audacious
+      - torbrowser-launcher
+      - neovim
+      - fish
+      - fastfetch
+      
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
       # - firefox
       # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - kate
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
