--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -34,6 +34,7 @@ modules:
       # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
       - kate
       - kate-krunner-plugin
+      - kate-plugins
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
