--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -27,6 +27,7 @@ modules:
       - fish
       - fastfetch
       - steam
+      - libreoffice
       
     remove:
       # example: removing firefox (in favor of the flatpak)
