--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -28,6 +28,7 @@ modules:
       - fastfetch
       - steam
       - libreoffice
+      - inkscape
       
     remove:
       # example: removing firefox (in favor of the flatpak)
