--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -42,6 +42,7 @@ modules:
       - kcharselect
       - kfind
       - krfb
+      - krfb-libs
       - kwalletmanager5
 
   - type: default-flatpaks
