--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -44,6 +44,7 @@ modules:
       - krfb
       - krfb-libs
       - kwalletmanager5
+      - firewall-config
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
