--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -45,6 +45,8 @@ modules:
       - krfb-libs
       - kwalletmanager5
       - firewall-config
+      - kdebugsettings
+      - kjournaldbrowser
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
