--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -46,7 +46,7 @@ modules:
       - kwalletmanager5
       - firewall-config
       - kdebugsettings
-      - kjournaldbrowser
+      - kjournald
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
