--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -18,6 +18,7 @@ modules:
   - type: rpm-ostree
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+      - https://copr.fedorainfracloud.org/coprs/che/nerd-fonts/repo/fedora-%OS_VERSION%/che-nerd-fonts-fedora-%OS_VERSION%.repo
     install:
       # - micro
       # - starship
@@ -33,6 +34,7 @@ modules:
       - libreoffice-langpack-pt-BR
       - inkscape
       - solaar
+      - nerd-fonts
       
     remove:
       # example: removing firefox (in favor of the flatpak)
