--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -56,6 +56,8 @@ modules:
       - vim
 
   - type: brew
+    auto-update: true
+    auto-upgrade: true
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
