--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -53,7 +53,7 @@ modules:
       - kdebugsettings
       - kjournald
       - kjournald-libs
-      - vim
+      #- vim
 
   - type: brew
     auto-update: true
