--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -23,6 +23,7 @@ modules:
       # - micro
       # - starship
       - audacious
+      - thunderbird
       - torbrowser-launcher
       - neovim
       - fish
