--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -4,8 +4,8 @@ name: my-ublue
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/kinoite-nvidia
-image-version: latest # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/ublue-os/bazzite-nvidia
+image-version: stable # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -18,17 +18,13 @@ modules:
   - type: rpm-ostree
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
-      - https://copr.fedorainfracloud.org/coprs/che/nerd-fonts/repo/fedora-%OS_VERSION%/che-nerd-fonts-fedora-%OS_VERSION%.repo
     install:
       # - micro
       # - starship
       - audacious
       - thunderbird
       - torbrowser-launcher
-      - fish
-      - fastfetch
-      - steam
-      - nerd-fonts
+      - firefox
       
     remove:
       # example: removing firefox (in favor of the flatpak)
