--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -47,7 +47,7 @@ modules:
       - rp-config
       - fcitx5
       - input-remapper
-      - krdpserver
+      - krdp
 
   - type: brew
     auto-update: true
