--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -49,6 +49,7 @@ modules:
       - fcitx5
       - fcitx5-mozc
       - fcitx5-data
+      - fcitx5-chinese-addons
 
   - type: brew
     auto-update: true
