--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -50,6 +50,9 @@ modules:
       - fcitx5-mozc
       - fcitx5-data
       - fcitx5-chinese-addons
+      - fcitx5-chinese-addons-data
+      - fcitx5-lua
+      - fcitx5-hangul
 
   - type: brew
     auto-update: true
